at1/ex6.txt
O erro se encontra na primeira linha, onde omitiu-se o "#" do "include".

Mensagem de erro do terminal:
test.c:1:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | include <stdio.h>
      |       ^
